# IprjPlusBackEnd

./: Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: pipeline.yaml
accounts/: admin.py  apps.py  urls.py
accounts/migrations/: 0001_initial.py  0002_tweet_comment.py  0002_user_avatar.py
accounts/models/: __init__.py  comment.py  like.py  otp.py  retweet.py  tweet.py  user.py
accounts/serializers/: otp.py  register.py  tweets.py
accounts/views/: login.py  otp.py  register.py  tweets.py  user.py
iprjplus_backend/: asgi.py  settings.py  urls.py  wsgi.py
